fix(steps): #566, update steps footer btns gap to 12px

--- a/theme/dt-theme/default/steps.less
+++ b/theme/dt-theme/default/steps.less
@@ -69,7 +69,7 @@
                 left: 0;
                 right: 0;
                 .ant-btn {
-                    margin-left: 10px;
+                    margin-left: 12px;
                 }
             }
         }
